# foldlab

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  render.yaml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  constants.py  db.py  main.py  models.py  schemas.py
backend/app/api/: chat.py  folding.py  projects.py  sequences.py  variants.py
backend/app/data/fixtures/: _generate.py
backend/app/nl/: client.py  handlers.py  loop.py  prompt.py  tools.py
backend/app/providers/: base.py  factory.py  mock_provider.py  rowan_provider.py
backend/app/services/: jobs.py  poller.py  sequences.py  structures.py  variants.py
backend/tests/: test_folding.py  test_nl.py  test_sequences.py  test_variants.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: chat.ts  client.ts  folding.ts  sequences.ts  variants.ts
frontend/src/components/: ChatPanel.tsx  DevSubmitPanel.tsx  FoldControls.tsx  JobBadge.tsx  ResultsGallery.tsx  SequenceEditor.tsx  VariantPanel.tsx
frontend/src/lib/: jobs.ts  sequence.ts
frontend/src/state/: useChatStore.ts  useJobsStore.ts
frontend/src/ui/: ScoreChips.tsx  Tabs.tsx  icons.tsx  score.ts
frontend/src/viewer/: MolstarViewer.tsx  directives.ts  molstar-setup.ts  picking.ts  viewer.css
scripts/: dev.ps1  dev.sh
